2007-11-12  Hynek Hanke  <hanke@homer.brailcom.xx>

	* src/modules/espeak.c (espeak_send_to_audio): spd_audio_play
	call updated with endian information.

	* src/audio/alsa.c (alsa_play): Handle endianness correctly.

	* src/modules/ibmtts.c (ibmtts_play_file): spd_audio_play
	call updated with endian information.

	* src/modules/flite.c (_flite_speak): spd_audio_play
	call updated with endian information.

	* src/modules/festival.c (festival_send_to_audio): spd_audio_play
	call updated with endian information.

	* src/modules/espeak.c (espeak_play_file): spd_audio_play
	call updated with endian information.

	* src/audio/spd_audio.h: Argument format added to spd_audio_play,
	all callers updated.

	* src/audio/spd_audio.c (spd_audio_play): Perform
	byte swap if endianness doesn't match (Patch by Luke
	Yelavich.

2007-11-11  Gilles Casse  <gcasse@oralux.org>

	* src/audio/pulse.c: New file.

	* configure.in, config/modules/espeak.conf,
	config/modules/festival.conf, config/modules/flite.conf,
	config/modules/ibmtts.conf, src/audio/Makefile.am,
	src/audio/spd_audio.c, src/audio/spd_audio.h,
	src/modules/espeak.c, src/modules/festival.c, src/modules/flite.c,
	src/modules/ibmtts.c: files updated for PulseAudio support.

2007-11-05  Hynek Hanke  <hanke@syrr.buchal.name>

	* src/server/speaking.c (speaking_pause_all): Initialize err
	to 0.

	* src/server/output.c (_output_get_voices): Unused variable j,
	atom removed.

	* src/server/set.c (set_synthesis_voice_uid): Unused variable
	output_module removed.

	* src/server/speechd.h (SpeechDOptions): localhost_access_only: new
	variables.

	* src/server/speechd.c (speechd_options_init): Default values
	for LocalhostAccessOnly.
	(main): Open port to all adresses or to localhost only based
	on LocalhostAccessOnly option.

	* src/server/config.c (load_default_global_set_options): Added new
	option LocalhostAccessOnly with default value 1.
	

2007-09-24  Hynek Hanke  <hanke@syrr.buchal.name>
